# the-idea-stage

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  render.yaml
.claude/: launch.json
.codex/: config.toml
api/: __init__.py  auth.py  billing.py  credits.py  db.py  main.py  models_db.py  store.py
engine/: __init__.py  cli.py  client.py  coach.py  conductor.py  config.py  mock.py  models.py  playbook.py  pressure_test.py  pricing.py  roles.py  stages.py
engine/skills/: competitive-tiering.md  devils-advocate.md  hypothesis-sharpening.md  interview-design.md  stage-coach.md  tam-sam-som.md
old/: .env.example  .gitignore  CLAUDE.md  README.md  ideas.txt  pyproject.toml
old/idea-generator/idea-digests/: 2026-06-01-b.md  2026-06-01-c.md  2026-06-01.md  2026-06-02-b.md  2026-06-02-c.md  2026-06-02-d.md  2026-06-02-e.md  2026-06-02-f-1.md  2026-06-02-f.md  2026-06-02-g.md  2026-06-02.md  2026-06-03.md  2026-06-04.md
old/idea-generator/reports/: report-1.json  report-2.json  report.json
old/prompts/: idea_digest.md
old/skills/competitive-tiering/: SKILL.md
old/skills/devils-advocate/: SKILL.md
old/skills/founder-profile/: SKILL.md
old/skills/gate-rubric/: SKILL.md
old/skills/hypothesis-sharpening/: SKILL.md
old/skills/interview-design/: SKILL.md
old/skills/tam-sam-som/: SKILL.md  build_model.py  template.md
old/src/idea_gauntlet/: __init__.py  agents.py  cli.py  conductor.py  config.py  gates.py  mock.py  models.py  permissions.py  persist.py  runner.py  stages.py  trace.py
old/tests/: test_smoke.py
tests/: test_billing_gate.py  test_credits_db.py  test_engine_smoke.py  test_pricing.py
web/: .gitignore  package-lock.json  package.json
web/lib/: api.ts  (+1 more)
(+11 files in other folders)
