[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "the-idea-stage"
version = "0.1.0"
description = "The Idea Stage — guided startup-idea validation on the founders playbook."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40,<1",
    "pydantic>=2.7,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sse-starlette>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "httpx>=0.27,<1",
    "razorpay>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[project.scripts]
idea-stage = "engine.cli:main"

[tool.setuptools]
packages = ["engine", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
