[project]
name = "idea-gauntlet"
version = "0.1.0"
description = "A gated multi-agent gauntlet for validating startup ideas, built on the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pinned: the SDK API moves. 0.2.87 is the latest stable at build time.
    "claude-agent-sdk==0.2.87",
    "pydantic>=2.7,<3",
    # Used by the tam-sam-som skill's builder script to write the xlsx model.
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
idea-gauntlet = "idea_gauntlet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idea_gauntlet"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
